--- a/appup.json
+++ b/appup.json
@@ -1,6 +1,6 @@
 {
   "name":"soza-2.0",
-  "description":"bot whatsapp développé par djalega++",
+  "description":"bot whatsapp développé par djaleg++",
   "keywords":["bot","node","baileys","whatsapp"],
   "logo":"https://raw.githubusercontent.com/djalega8000/Zokou-2.0/main/Zokou.jpg",
   "repository":"https://github.com/Sozahk/Zokou-2.0",
